# mcp-rampart

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  missing_pattern.md
.github/workflows/: ci.yml
case-studies/: 01-fastapi-mcp-examples.md  README.md
docs/: LAUNCH-KIT.md  index.html
examples/mealie_demo/: app.py
mcp_rampart/: __init__.py  audit.py  bridge.py  core.py  injection.py  runtime.py
mcpsentry/: __init__.py  audit.py  bridge.py  injection.py  runtime.py
tests/: conftest.py  test_audit.py  test_core.py  test_injection.py  test_runtime.py
