[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-rampart"
version = "0.3.1"
description = "The MCP bridge that audits your routes before exposing them to LLMs — and blocks prompt-injection at runtime."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Miloud Belarebia", email = "contact@miloudbelarebia.com"},
]
keywords = ["mcp", "model-context-protocol", "fastapi", "llm", "ai", "claude", "chatgpt", "gemini", "security", "audit", "agent-safety", "prompt-injection", "runtime-guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
    "uvicorn>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/miloudbelarebia/mcp-rampart"
Documentation = "https://github.com/miloudbelarebia/mcp-rampart#readme"
Repository = "https://github.com/miloudbelarebia/mcp-rampart"
Issues = "https://github.com/miloudbelarebia/mcp-rampart/issues"
